# event-message-detector

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: inference.py
training/: data_labeling.ipynb  model_training.ipynb
